# uchroma

./: .gitignore  CMakeLists.txt  FQPlot.desktop  Makefile.am  changeversion  commit  configure.ac  desktop.cmake  fqplot.kdev4  uChroma.desktop  uchroma.kdev4
.kdev4/: surf.kdev4
doc/: chapter.md
doc/10.data/: chapter.md
doc/20.gui/: chapter.md
doc/20.gui/10.axes/: chapter.md
doc/20.gui/20.collections/: chapter.md
doc/20.gui/40.layout/: chapter.md
doc/20.gui/60.style/: chapter.md
doc/90.typesetting/: chapter.md
extra/: FQPlot.desktop  FQPlot.dt  NSIS.template.in  debian.changelog  debian.control  debian.rules  dmginfo.txt  uChroma.desktop  uchroma.dsc  uchroma.spec
extra/LEAP42.1/: README  uchroma.spec
extra/OSX/: uchroma.dmginfo
extra/OpenSuSE13.2/: README  uchroma.spec
extra/SL7.2/: README  uchroma.spec
extra/Ubuntu14.04/: README  changelog  control  rules
extra/Ubuntu16.04/: changelog  control  rules
extra/Win32/: uchroma.iss
resources/test/: cos.ucr  logarithm.ucr  viewtypes.ucr  wanderer.ucr
resources/test/data/: cos10.txt  gauss00.txt  gauss05.txt  gauss09.txt  gauss10.txt  gauss15.txt  gauss22.txt  gauss23.txt  gauss26.txt  gauss36.txt  gauss37.txt  gauss39.txt  gauss46.txt  gauss48.txt  triangle1.txt
src/: CMakeLists.txt  Makefile.am  main.cpp  version.h
src/base/: CMakeLists.txt  Makefile.am  axes.cpp  axes.h  collection.cpp  collection.h  colourscale.cpp  colourscale.h  currentproject.cpp  currentproject.h  data2d.cpp  data2d.h  dataset.cpp  dataset.h  dataspace.cpp  dataspace.h  dataspacedata.cpp  dataspacedata.h  dataspacerange.cpp  dataspacerange.h  displaydataset.cpp  displaydataset.h  dnchar.cpp  dnchar.h  equation.cpp  equation.h  equationvariable.cpp  equationvariable.h  indexdata.cpp  indexdata.h  lineparser.cpp  lineparser.h  messenger.cpp  messenger.h  namedvalue.cpp  namedvalue.h  numberformat.cpp  numberformat.h  nxs.cpp  nxs.h  (+20 more)
src/command/: Makefile.am  commands.cpp  commands.h  flow.cpp  functions.cpp  math.cpp  operators.cpp
src/expression/: CMakeLists.txt  Makefile.am  expression.cpp  expression.h  expression_grammar.cc  expression_grammar.hh  expression_grammar.yy  expression_lexer.cpp  functionnode.cpp  functionnode.h  functions.cpp  functions.h  grammar.cc  grammar.hh  grammar.yy  node.cpp  node.h  variable.cpp  variable.h  variablenode.cpp  variablenode.h
src/gui/: CMakeLists.txt  Makefile.am  axes.cpp  axes.h  axes.ui  axes_funcs.cpp  colourbutton.hui  colourbutton.uih  colourbutton_funcs.cpp  colourscale.uih  colourscale_funcs.cpp  create.h  create.ui  create_funcs.cpp  data.cpp  data.h  data.ui  data_funcs.cpp  data_setz.h  data_setz.ui  data_setz_funcs.cpp  dataimport.h  dataimport.ui  dataimport_funcs.cpp  dataimport_seqxy.cpp  editdataset.h  editdataset.ui  editdataset_funcs.cpp  editfitkernel.h  editfitkernel.ui  editfitkernel_funcs.cpp  editfitresults.h  editfitresults_funcs.cpp  editlinestyle.h  editlinestyle.ui  editlinestyle_funcs.cpp  editnumberformat.h  editnumberformat.ui  editnumberformat_funcs.cpp  editreference.h  (+156 more)
src/kernels/: CMakeLists.txt  Makefile.am  fit.cpp  fit.h  fit_sd.cpp  fit_sdmod.cpp  fit_simplex.cpp  fit_target.cpp
src/math/: CMakeLists.txt  Makefile.am  constants.h  cuboid.cpp  cuboid.h  doubleexp.cpp  doubleexp.h  mathfunc.cpp  mathfunc.h  matrix.cpp  matrix.h
src/parser/: CMakeLists.txt  Makefile.am  accessor.h  commandnode.cpp  commandnode.h  double.cpp  double.h  grammar.cc  grammar.hh  grammar.yy  integer.cpp  integer.h  parser.cpp  parser.h  parser_lexer.cpp  parser_tree.cpp  returnvalue.cpp  returnvalue.h  scopenode.cpp  scopenode.h  stepnode.cpp  stepnode.h  tree.cpp  tree.h  tree_opcheck.cpp  treenode.cpp  treenode.h  variable.cpp  variable.h  variablelist.cpp  variablelist.h  variablenode.cpp  variablenode.h  vtypes.cpp  vtypes.h
src/render/: CMakeLists.txt  Makefile.am  fontinstance.cpp  fontinstance.h  glextensions.cpp  glextensions.h  linestipple.cpp  linestipple.h  linestyle.cpp  linestyle.h  primitive.cpp  primitive.h  primitive_vertex.cpp  primitiveinfo.cpp  primitiveinfo.h  primitiveinstance.cpp  primitiveinstance.h  primitivelist.cpp  primitivelist.h  surface.cpp  surface.h  surface_full.cpp  surface_grid.cpp  surface_linexy.cpp  surface_linezy.cpp  textformat.cpp  textformat.h  textfragment.cpp  textfragment.h  textprimitive.cpp  textprimitive.h  textprimitive_grammar.cc  textprimitive_grammar.hh  textprimitive_grammar.yy  textprimitivelist.cpp  textprimitivelist.h  trianglechopper.cpp  trianglechopper.h  user_axes.cpp  vertexchunk.cpp  (+1 more)
src/session/: CMakeLists.txt  Makefile.am  editstate.cpp  editstate.h  editstate_axes.cpp  editstate_collection.cpp  editstate_viewpane.cpp  editstatedata.cpp  editstatedata.h  editstategroup.cpp  editstategroup.h  keywords.cpp  load.cpp  save.cpp  session.cpp  session.h
src/templates/: Makefile.am  array.h  list.h  objectlist.h  objectstore.h  reflist.h  simplex.h  variantpointer.h  vector3.h  vector4.h
test/: cos.fqp  cos.ucr  cos01.txt  cos10.txt  gauss01.txt  gauss02.txt  gauss03.txt  gauss04.txt  gauss06.txt  gauss07.txt  gauss08.txt  gauss11.txt  gauss13.txt  gauss16.txt  gauss17.txt  gauss20.txt  gauss21.txt  gauss24.txt  gauss28.txt  gauss29.txt  gauss30.txt  gauss32.txt  gauss33.txt  gauss34.txt  gauss40.txt  gauss41.txt  gauss42.txt  gauss43.txt  gauss44.txt  gauss45.txt  gauss47.txt  gauss49.txt  logarithm.fqp  logarithm1.txt  triangle.fqp  triangles.fqp  wanderer.ucr
test/data/: cos01.txt  cos06.txt  gauss12.txt  gauss14.txt  gauss18.txt  gauss19.txt  gauss25.txt  gauss27.txt  gauss31.txt  gauss35.txt  gauss38.txt  gauss50.txt
