add_library(base
  axes.cpp
  collection.cpp
  colourscale.cpp
  currentproject.cpp
  data2d.cpp
  dataset.cpp
  dataspace.cpp
  dataspacerange.cpp
  displaydataset.cpp
  dnchar.cpp
  equationvariable.cpp
  indexdata.cpp
  lineparser.cpp
  messenger.cpp
  nxs.cpp
  referencevariable.cpp
  sysfunc.cpp
  targetdata.cpp
  transformer.cpp
  viewlayout.cpp
  viewpane.cpp
  axes.h
  collection.h
  colourscale.h
  currentproject.h
  data2d.h
  dataset.h
  dataspace.h
  dataspacerange.h
  displaydataset.h
  dnchar.h
  equationvariable.h
  indexdata.h
  lineparser.h
  messenger.h
  nxs.h
  referencevariable.h
  sysfunc.h
  targetdata.h
  transformer.h
  viewlayout.h
  viewpane.h
)

include_directories(
../
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
)
