add_library(base
  axes.cpp
  collection.cpp
  colourscale.cpp
  data2d.cpp
  dataset.cpp
  dataspace.cpp
  dataspacerange.cpp
  displaydataset.cpp
  equationvariable.cpp
  indexdata.cpp
  lineparser.cpp
  messenger.cpp
  numberformat.cpp
  nxs.cpp
  referencevariable.cpp
  session.cpp
  sysfunc.cpp
  targetdata.cpp
  targetprimitive.cpp
  transformer.cpp
  viewlayout.cpp
  viewpane.cpp
  axes.h
  collection.h
  colourscale.h
  data2d.h
  dataset.h
  dataspace.h
  dataspacerange.h
  displaydataset.h
  equationvariable.h
  indexdata.h
  lineparser.h
  messenger.h
  numberformat.h
  nxs.h
  referencevariable.h
  session.h
  sysfunc.h
  targetdata.h
  targetprimitive.h
  transformer.h
  viewlayout.h
  viewpane.h
)

include_directories(
../
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
)
