add_library(base
  axes.cpp
  collection.cpp
  colourscale.cpp
  data2d.cpp
  dataset.cpp
  dataspace.cpp
  dataspacerange.cpp
  displaydataset.cpp
  equationvariable.cpp
  indexdata.cpp
  lineparser.cpp
  namedvalue.cpp
  messenger.cpp
  numberformat.cpp
  nxs.cpp
  referencevariable.cpp
  signal.cpp
  sysfunc.cpp
  targetdata.cpp
  targetprimitive.cpp
  transformer.cpp
  viewlayout.cpp
  viewpane.cpp
  axes.h
  collection.h
  colourscale.h
  data2d.h
  dataset.h
  dataspace.h
  dataspacerange.h
  displaydataset.h
  equationvariable.h
  indexdata.h
  lineparser.h
  namedvalue.h
  messenger.h
  numberformat.h
  nxs.h
  referencevariable.h
  signal.h
  sysfunc.h
  targetdata.h
  targetprimitive.h
  transformer.h
  viewlayout.h
  viewpane.h
)

target_include_directories(base PRIVATE
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_BINARY_DIR}/src
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
  ${Qt5Gui_INCLUDE_DIRS}
  ${FREETYPE_INCLUDE_DIRS}
)
