noinst_LIBRARIES = libbase.a

libbase_a_SOURCES = axes.cpp collection.cpp colourscale.cpp data2d.cpp dataset.cpp dataspace.cpp dataspacerange.cpp displaydataset.cpp equationvariable.cpp indexdata.cpp lineparser.cpp namedvalue.cpp messenger.cpp numberformat.cpp nxs.cpp referencevariable.cpp signal.cpp sysfunc.cpp targetdata.cpp targetprimitive.cpp transformer.cpp viewlayout.cpp viewpane.cpp

noinst_HEADERS = axes.h collection.h colourscale.h data2d.h dataset.h dataspace.h dataspacerange.h displaydataset.h equationvariable.h indexdata.h lineparser.h namedvalue.h messenger.h numberformat.h nxs.h referencevariable.h signal.h sysfunc.h targetdata.h targetprimitive.h transformer.h viewlayout.h viewpane.h

INCLUDES = -I$(top_srcdir)/src -I../ @GUI_CFLAGS@
