include_directories(
./
../
${CMAKE_CURRENT_BINARY_DIR} 
${CMAKE_CURRENT_BINARY_DIR}/../
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src/
)

add_library(render
fontinstance.cpp
glextensions.cpp
primitive.cpp
primitive_vertex.cpp
primitiveinfo.cpp
primitiveinstance.cpp
primitivelist.cpp
surface.cpp
surface_grid.cpp
surface_linexy.cpp
surface_linezy.cpp
surface_full.cpp
textprimitive.cpp
vertexchunk.cpp
fontinstance.h
glextensions.h
primitive.h
primitiveinfo.h
primitiveinstance.h
primitivelist.h
surface.h
textprimitive.h
vertexchunk.h
)

